# full-stack-app

./: .gitignore
backend/: database.py  database_models.py  docker-compose.yml  main.py  mysql.db  mysql.py  pyproject.toml
frontend/: login.css  login.html  login.js
